# fleet-manifest

./: .gitignore  Cargo.toml  MANIFEST.md  README.md
src/: lib.rs
tests/: manifest_tests.rs
