[package]
name = "fleet-manifest"
version = "0.1.0"
edition = "2021"
description = "Fleet inventory and capability manifest. Source of truth for agent ownership, trust relationships, and communication protocols."
repository = "https://github.com/SuperInstance/fleet-manifest"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
